--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,12 @@
     "require": {
         "crodas/haanga": "^1.0",
         "huqis/huqis": "dev-develop",
-        "smarty/smarty": "^3.0",
-        "twig/twig": "^2.0",
-        "latte/latte": "^2.0",
-        "philo/laravel-blade": "3.*"
+        "smarty/smarty": "^3.1",
+        "twig/twig": "^3.0",
+        "latte/latte": "^2.8",
+        "philo/laravel-blade": "^3.1",
+	"league/plates": "v4.0.0-alpha",
+	"mustache/mustache": "^2.13",
+	"eftec/bladeone": "^3.47"
     }
 }
